--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,9 @@ font-weight: 500;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.add-to-cart:hover{
+  background: coral;
+}
 
 
 .product-card {
