--- a/styles/style.css
+++ b/styles/style.css
@@ -235,14 +235,13 @@ font-weight: 500;
     color: black;
   }
   
-}/* Hide hamburger by default */
+}
 .hamburger {
   display: none;
   font-size: 28px;
   cursor: pointer;
 }
 
-/* Mobile responsive */
 @media screen and (max-width: 768px) {
   .navbar {
     flex-direction: column;
